spacing fix for dashboard table data

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,7 +77,7 @@ body{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
 }
 
